--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base theme -->
-    <style name="Theme.Fadveil" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- AMOLED theme -->
+    <style name="Theme.Fadveil.Amoled" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary_red</item>
         <item name="colorPrimaryVariant">@color/darker_red</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="android:statusBarColor">@color/dark_gray</item>
-        <item name="android:navigationBarColor">@color/dark_gray</item>
-        <item name="android:windowBackground">@color/background_dark</item>
-        <item name="colorSurface">@color/surface_dark</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:windowBackground">@color/background_amoled</item>
+        <item name="colorSurface">@color/surface_amoled</item>
         <item name="colorOnSurface">@color/white</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
@@ -17,4 +17,4 @@
         <item name="colorOnSecondary">@color/white</item>
         <item name="colorSecondary">@color/primary_red</item>
     </style>
-</resources>
+</resources> 
