--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- AMOLED theme -->
-    <style name="Theme.Fadveil.Amoled" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Fadveil.Amoled" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary_red</item>
         <item name="colorPrimaryVariant">@color/darker_red</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="android:statusBarColor">@color/black</item>
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/nav_background_amoled</item>
         <item name="android:windowBackground">@color/background_amoled</item>
         <item name="colorSurface">@color/surface_amoled</item>
         <item name="colorOnSurface">@color/white</item>
@@ -16,5 +16,12 @@
         <item name="colorOnBackground">@color/white</item>
         <item name="colorOnSecondary">@color/white</item>
         <item name="colorSecondary">@color/primary_red</item>
+        <item name="colorSecondaryVariant">@color/darker_red</item>
+        <item name="colorPrimaryContainer">@color/darker_red</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
+        <item name="colorSecondaryContainer">@color/black</item>
+        <item name="colorOnSecondaryContainer">@color/white</item>
+        <item name="colorSurfaceVariant">@color/nav_background_amoled</item>
+        <item name="colorOnSurfaceVariant">@color/white</item>
     </style>
 </resources> 
