--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,18 @@
     <color name="darker_red">#CC0000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark_gray">#FF121212</color>
     
-    <!-- Theme variations -->
+    <!-- Dark theme colors -->
+    <color name="dark_gray">#FF121212</color>
+    <color name="darker_gray">#FF1E1E1E</color>
+    <color name="surface_dark">#FF2D2D2D</color>
     <color name="background_dark">#FF121212</color>
+    
+    <!-- AMOLED colors -->
     <color name="background_amoled">#FF000000</color>
-    <color name="surface_dark">#FF1E1E1E</color>
     <color name="surface_amoled">#FF000000</color>
+    
+    <!-- Navigation colors -->
+    <color name="nav_background_dark">#FF1E1E1E</color>
+    <color name="nav_background_amoled">#FF000000</color>
 </resources>
