--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/darker_gray"
+                app:cardBackgroundColor="?attr/colorSurfaceContainer"
                 app:cardElevation="2dp"
                 style="@style/Widget.Material3.CardView.Elevated">
 
