--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,5 +36,37 @@
         <!-- Bottom Navigation specific colors -->
         <item name="colorSurfaceVariant">@color/nav_background_dark</item>
         <item name="colorOnSurfaceVariant">@color/white</item>
+        
+        <!-- Add this for cards -->
+        <item name="colorSurfaceContainer">@color/card_background_dark</item>
     </style>
+
+        <!-- AMOLED theme -->
+    <style name="Theme.Fadveil.Amoled" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/primary_red</item>
+        <item name="colorPrimaryVariant">@color/darker_red</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/nav_background_amoled</item>
+        <item name="android:windowBackground">@color/background_amoled</item>
+        <item name="colorSurface">@color/surface_amoled</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="colorOnBackground">@color/white</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondary">@color/primary_red</item>
+        <item name="colorSecondaryVariant">@color/darker_red</item>
+        <item name="colorPrimaryContainer">@color/darker_red</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
+        <item name="colorSecondaryContainer">@color/black</item>
+        <item name="colorOnSecondaryContainer">@color/white</item>
+        <item name="colorSurfaceVariant">@color/surface_amoled</item>
+        <item name="colorOnSurfaceVariant">@color/white</item>
+        
+        <!-- Add this for cards -->
+        <item name="colorSurfaceContainer">@color/surface_amoled</item>
+    </style>
+    
 </resources>
