--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -49,7 +49,7 @@
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Theme Settings"
+                        android:text="@string/settings_title"
                         android:textAppearance="?attr/textAppearanceTitleLarge" />
 
                     <com.google.android.material.materialswitch.MaterialSwitch
@@ -57,7 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="AMOLED Black Theme"
+                        android:text="@string/amoled_theme_title"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
