--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base colors -->
-    <color name="primary_red">#FF0000</color>
-    <color name="darker_red">#CC0000</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    
-    <!-- Dark theme colors -->
-    <color name="dark_gray">#FF121212</color>
-    <color name="darker_gray">#FF1E1E1E</color>
-    <color name="surface_dark">#FF2D2D2D</color>
-    <color name="background_dark">#FF121212</color>
-    
-    <!-- AMOLED colors -->
-    <color name="background_amoled">#FF000000</color>
-    <color name="surface_amoled">#FF050505</color>
-    
-    <!-- Navigation colors -->
-    <color name="nav_background_dark">#FF1E1E1E</color>
-    <color name="nav_background_amoled">#FF000000</color>
-    
-    <!-- Card colors -->
-    <color name="card_background_dark">#FF1A1A1A</color>  <!-- Darker than surface_dark -->
-    <color name="card_background_amoled">#FF0A0A0A</color>  <!-- Almost black but not pure black -->
+    <color name="primary_red">#FF0000</color>
+    <color name="darker_red">#CC0000</color>
+    <color name="nav_background_amoled">#000000</color>
+    <color name="background_amoled">#000000</color>
+    <color name="surface_amoled">#000000</color>
+    <color name="surface_dark">#121212</color>
 </resources>
