--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="card_corner_radius">8dp</dimen>
     <dimen name="card_elevation">4dp</dimen>
+    <dimen name="overlay_corner_radius">16dp</dimen>
+    <dimen name="overlay_initial_width">200dp</dimen>
+    <dimen name="overlay_initial_height">200dp</dimen>
+    <dimen name="overlay_min_size">100dp</dimen>
 </resources>
